<?xml version="1.0"?>
<package format="3">
  <name>asr_sdm_guidance_planner</name>
  <version>0.1.0</version>
  <description>C++ guidance planner library plus RViz test node for global start/goal waypoint generation.</description>
  <maintainer email="carveyrtrail@163.com">Willianms</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core library dependencies. -->
  <depend>asr_sdm_lbfgs_solver</depend>
  <depend>asr_sdm_esdf_map</depend>
  <depend>eigen</depend>

  <!-- RViz test node dependencies. They are intentionally not exported by CMake targets. -->
  <build_depend>rclcpp</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
