<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematype="xml"?>
<package format="3">
  <name>asr_sdm_local_path_modifier</name>
  <version>0.0.0</version>
  <description>The asr_sdm_local_path_modifier package (ROS 2)</description>

  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>asr_sdm_esdf_map</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
