<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematype="xml"?>
<package format="3">
  <name>asr_sdm_planning_manager</name>
  <version>0.0.0</version>
  <description>The fast_planner package (ROS 2)</description>

  <maintainer email="bzhouai@todo.todo">bzhouai</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>cv_bridge</depend>

  <depend>quadrotor_msgs</depend>
  <depend>asr_sdm_esdf_map</depend>
  <depend>asr_sdm_local_path_modifier</depend>
  <depend>bspline</depend>
  <depend>asr_sdm_trajectory_generator</depend>
  <depend>asr_sdm_trajectory_optimizer</depend>
  <depend>asr_sdm_trajectory_visualizer</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
